eks-public-subnet/vpc-sg-eks-nodes.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Amazon EKS VPC ",
    "Parameters": {
        "VpcBlock": {
            "Type": "String",
            "Default": "192.168.0.0/16",
            "Description": "The CIDR range for the VPC. This should be a valid private (RFC 1918) CIDR range."
        },
        "Subnet01Block": {
            "Type": "String",
            "Default": "192.168.0.0/24",
            "Description": "CidrBlock for subnet 01 within the VPC"
        },
        "Subnet02Block": {
            "Type": "String",
            "Default": "192.168.1.0/24",
            "Description": "CidrBlock for subnet 02 within the VPC"
        },
        "Subnet03Block": {
            "Type": "String",
            "Default": "192.168.2.0/24",
            "Description": "CidrBlock for subnet 03 within the VPC. This is used only if the region has more than 2 AZs."
        },
        "ClusterName": {
            "Description": "Name of the Cluster",
            "Type": "String"
        },
        "ClusterVersion": {
            "Description": "Cluster Version",
            "Type": "String",
            "Default": "1.11",
            "AllowedValues": [
                "1.10",
                "1.11",
                "1.12"
            ]
        },
        "KeyName": {
            "Description": "The EC2 Key Pair to allow SSH access to the instances",
            "Type": "AWS::EC2::KeyPair::KeyName"
        },
        "NodeImageId": {
            "Description": "AMI id for the node instances (Amazon Region & EKS version dependent).For the Amazon EKS-Optimized AMI, refer https://docs.aws.amazon.com/eks/latest/userguide/eks-optimized-ami.html",
            "Type": "AWS::EC2::Image::Id",
            "Default": "ami-02c1de421df89c58d"
        },
        "NodeInstanceType": {
            "Description": "EC2 instance type for the node instances",
            "Type": "String",
            "Default": "t3.medium",
            "ConstraintDescription": "Must be a valid EC2 instance type",
            "AllowedValues": [
                "t2.small",
                "t2.medium",
                "t2.large",
                "t2.xlarge",
                "t2.2xlarge",
                "t3.nano",
                "t3.micro",
                "t3.small",
                "t3.medium",
                "t3.large",
                "t3.xlarge",
                "t3.2xlarge",
                "m3.medium",
                "m3.large",
                "m3.xlarge",
                "m3.2xlarge",
                "m4.large",
                "m4.xlarge",
                "m4.2xlarge",
                "m4.4xlarge",
                "m4.10xlarge",
                "m5.large",
                "m5.xlarge",
                "m5.2xlarge",
                "m5.4xlarge",
                "m5.12xlarge",
                "m5.24xlarge",
                "c4.large",
                "c4.xlarge",
                "c4.2xlarge",
                "c4.4xlarge",
                "c4.8xlarge",
                "c5.large",
                "c5.xlarge",
                "c5.2xlarge",
                "c5.4xlarge",
                "c5.9xlarge",
                "c5.18xlarge",
                "i3.large",
                "i3.xlarge",
                "i3.2xlarge",
                "i3.4xlarge",
                "i3.8xlarge",
                "i3.16xlarge",
                "r3.xlarge",
                "r3.2xlarge",
                "r3.4xlarge",
                "r3.8xlarge",
                "r4.large",
                "r4.xlarge",
                "r4.2xlarge",
                "r4.4xlarge",
                "r4.8xlarge",
                "r4.16xlarge",
                "x1.16xlarge",
                "x1.32xlarge",
                "p2.xlarge",
                "p2.8xlarge",
                "p2.16xlarge",
                "p3.2xlarge",
                "p3.8xlarge",
                "p3.16xlarge",
                "p3dn.24xlarge",
                "r5.large",
                "r5.xlarge",
                "r5.2xlarge",
                "r5.4xlarge",
                "r5.12xlarge",
                "r5.24xlarge",
                "r5d.large",
                "r5d.xlarge",
                "r5d.2xlarge",
                "r5d.4xlarge",
                "r5d.12xlarge",
                "r5d.24xlarge",
                "z1d.large",
                "z1d.xlarge",
                "z1d.2xlarge",
                "z1d.3xlarge",
                "z1d.6xlarge",
                "z1d.12xlarge"
            ]
        },
        "NodeAutoScalingGroupMinSize": {
            "Description": "Minimum size of Node Group ASG.",
            "Type": "Number",
            "Default": 1
        },
        "NodeAutoScalingGroupMaxSize": {
            "Description": "Maximum size of Node Group ASG. Set to at least 1 greater than NodeAutoScalingGroupDesiredCapacity.",
            "Type": "Number",
            "Default": 5
        },
        "NodeAutoScalingGroupDesiredCapacity": {
            "Description": "Desired capacity of Node Group ASG.",
            "Type": "Number",
            "Default": 2
        },
        "NodeVolumeSize": {
            "Description": "Node volume size",
            "Type": "Number",
            "Default": 20
        },
        "BootstrapArguments": {
            "Description": "Arguments to pass to the bootstrap script. See files/bootstrap.sh in https://github.com/awslabs/amazon-eks-ami",
            "Type": "String",
            "Default": ""
        },
        "NodeGroupName": {
            "Description": "Unique identifier for the Node Group.",
            "Type": "String"
        }
    },
    "Metadata": {
        "AWS::CloudFormation::Interface": {
            "ParameterGroups": [
                {
                    "Label": {
                        "default": "Worker Network Configuration"
                    },
                    "Parameters": [
                        "VpcBlock",
                        "Subnet01Block",
                        "Subnet02Block",
                        "Subnet03Block"
                    ]
                },
                {
                    "Label": {
                        "default": "EKS Cluster"
                    },
                    "Parameters": [
                        "ClusterName",
                        "ControlPlaneSecurityGroup"
                    ]
                },
                {
                    "Label": {
                        "default": "Worker Node Configuration"
                    },
                    "Parameters": [
                        "NodeGroupName",
                        "NodeAutoScalingGroupMinSize",
                        "NodeAutoScalingGroupDesiredCapacity",
                        "NodeAutoScalingGroupMaxSize",
                        "NodeInstanceType",
                        "NodeImageId",
                        "NodeVolumeSize",
                        "KeyName",
                        "BootstrapArguments"
                    ]
                }
            ]
        }
    },
    "Resources": {
        "VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {
                    "Ref": "VpcBlock"
                },
                "EnableDnsSupport": true,
                "EnableDnsHostnames": true,
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}-VPC"
                        }
                    }
                ]
            }
        },
        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway"
        },
        "VPCGatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "InternetGatewayId": {
                    "Ref": "InternetGateway"
                },
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "RouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Public Subnets"
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "Route": {
            "DependsOn": "VPCGatewayAttachment",
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "RouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "InternetGateway"
                }
            }
        },
        "Subnet01": {
            "Type": "AWS::EC2::Subnet",
            "Metadata": {
                "Comment": "Subnet 01"
            },
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        "0",
                        {
                            "Fn::GetAZs": {
                                "Ref": "AWS::Region"
                            }
                        }
                    ]
                },
                "CidrBlock": {
                    "Ref": "Subnet01Block"
                },
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}-Subnet01"
                        }
                    }
                ]
            }
        },
        "Subnet02": {
            "Type": "AWS::EC2::Subnet",
            "Metadata": {
                "Comment": "Subnet 02"
            },
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        "1",
                        {
                            "Fn::GetAZs": {
                                "Ref": "AWS::Region"
                            }
                        }
                    ]
                },
                "CidrBlock": {
                    "Ref": "Subnet02Block"
                },
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}-Subnet02"
                        }
                    }
                ]
            }
        },
        "Subnet03": {
            "Type": "AWS::EC2::Subnet",
            "Metadata": {
                "Comment": "Subnet 03"
            },
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        "2",
                        {
                            "Fn::GetAZs": {
                                "Ref": "AWS::Region"
                            }
                        }
                    ]
                },
                "CidrBlock": {
                    "Ref": "Subnet03Block"
                },
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${AWS::StackName}-Subnet03"
                        }
                    }
                ]
            }
        },
        "Subnet01RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "Subnet01"
                },
                "RouteTableId": {
                    "Ref": "RouteTable"
                }
            }
        },
        "Subnet02RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "Subnet02"
                },
                "RouteTableId": {
                    "Ref": "RouteTable"
                }
            }
        },
        "Subnet03RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "Subnet03"
                },
                "RouteTableId": {
                    "Ref": "RouteTable"
                }
            }
        },
        "ControlPlaneSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Cluster communication with worker nodes",
                "VpcId": {
                    "Ref": "VPC"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 443,
                        "ToPort": 443,
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 0,
                        "ToPort": 65535,
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        },
        "EKSCluster": {
            "Type": "AWS::EKS::Cluster",
            "Properties": {
                "Name": {
                    "Ref": "ClusterName"
                },
                "Version": {
                    "Ref": "ClusterVersion"
                },
                "ResourcesVpcConfig": {
                    "SecurityGroupIds": [
                        {
                            "Fn::GetAtt": [
                                "ControlPlaneSecurityGroup",
                                "GroupId"
                            ]
                        }
                    ],
                    "SubnetIds": [
                        {
                            "Ref": "Subnet01"
                        },
                        {
                            "Ref": "Subnet02"
                        },
                        {
                            "Ref": "Subnet03"
                        }
                    ]
                },
                "RoleArn": {
                    "Fn::GetAtt": [
                        "EksServiceRole",
                        "Arn"
                    ]
                }
            }
        },
        "EksServiceRole": {
            "Type": "AWS::IAM::Role",
            "Properties": {
                "AssumeRolePolicyDocument": {
                    "Version": "2012-10-17",
                    "Statement": [
                        {
                            "Effect": "Allow",
                            "Principal": {
                                "Service": [
                                    "eks.amazonaws.com"
                                ]
                            },
                            "Action": [
                                "sts:AssumeRole"
                            ]
                        }
                    ]
                },
                "Path": "/",
                "ManagedPolicyArns": [
                    "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy",
                    "arn:aws:iam::aws:policy/AmazonEKSServicePolicy"
                ],
                "RoleName": {
                    "Fn::Sub": "EksSvcRole-${AWS::StackName}"
                }
            }
        },
        "NodeInstanceProfile": {
            "Type": "AWS::IAM::InstanceProfile",
            "Properties": {
                "Path": "/",
                "Roles": [
                    {
                        "Ref": "NodeInstanceRole"
                    }
                ]
            }
        },
        "NodeInstanceRole": {
            "Type": "AWS::IAM::Role",
            "Properties": {
                "AssumeRolePolicyDocument": {
                    "Version": "2012-10-17",
                    "Statement": [
                        {
                            "Effect": "Allow",
                            "Principal": {
                                "Service": "ec2.amazonaws.com"
                            },
                            "Action": "sts:AssumeRole"
                        }
                    ]
                },
                "Path": "/",
                "ManagedPolicyArns": [
                    "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy",
                    "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy",
                    "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
                ]
            }
        },
        "NodeSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Security group for all nodes in the cluster",
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": {
                            "Fn::Sub": "kubernetes.io/cluster/${ClusterName}"
                        },
                        "Value": "owned"
                    }
                ]
            }
        },
        "NodeSecurityGroupIngress": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "DependsOn": "NodeSecurityGroup",
            "Properties": {
                "Description": "Allow node to communicate with each other",
                "GroupId": {
                    "Ref": "NodeSecurityGroup"
                },
                "SourceSecurityGroupId": {
                    "Ref": "NodeSecurityGroup"
                },
                "IpProtocol": -1,
                "FromPort": 0,
                "ToPort": 65535
            }
        },
        "NodeSecurityGroupFromControlPlaneIngress": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "DependsOn": "NodeSecurityGroup",
            "Properties": {
                "Description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "GroupId": {
                    "Ref": "NodeSecurityGroup"
                },
                "SourceSecurityGroupId": {
                    "Ref": "ControlPlaneSecurityGroup"
                },
                "IpProtocol": "tcp",
                "FromPort": 1025,
                "ToPort": 65535
            }
        },
        "ControlPlaneEgressToNodeSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroupEgress",
            "DependsOn": "NodeSecurityGroup",
            "Properties": {
                "Description": "Allow the cluster control plane to communicate with worker Kubelet and pods",
                "GroupId": {
                    "Ref": "ControlPlaneSecurityGroup"
                },
                "DestinationSecurityGroupId": {
                    "Ref": "NodeSecurityGroup"
                },
                "IpProtocol": "tcp",
                "FromPort": 1025,
                "ToPort": 65535
            }
        },
        "NodeSecurityGroupFromControlPlaneOn443Ingress": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "DependsOn": "NodeSecurityGroup",
            "Properties": {
                "Description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane",
                "GroupId": {
                    "Ref": "NodeSecurityGroup"
                },
                "SourceSecurityGroupId": {
                    "Ref": "ControlPlaneSecurityGroup"
                },
                "IpProtocol": "tcp",
                "FromPort": 443,
                "ToPort": 443
            }
        },
        "ControlPlaneEgressToNodeSecurityGroupOn443": {
            "Type": "AWS::EC2::SecurityGroupEgress",
            "DependsOn": "NodeSecurityGroup",
            "Properties": {
                "Description": "Allow the cluster control plane to communicate with pods running extension API servers on port 443",
                "GroupId": {
                    "Ref": "ControlPlaneSecurityGroup"
                },
                "DestinationSecurityGroupId": {
                    "Ref": "NodeSecurityGroup"
                },
                "IpProtocol": "tcp",
                "FromPort": 443,
                "ToPort": 443
            }
        },
        "ClusterControlPlaneSecurityGroupIngress": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "DependsOn": "NodeSecurityGroup",
            "Properties": {
                "Description": "Allow pods to communicate with the cluster API Server",
                "GroupId": {
                    "Ref": "ControlPlaneSecurityGroup"
                },
                "SourceSecurityGroupId": {
                    "Ref": "NodeSecurityGroup"
                },
                "IpProtocol": "tcp",
                "ToPort": 443,
                "FromPort": 443
            }
        },
        "NodeGroup": {
            "Type": "AWS::AutoScaling::AutoScalingGroup",
            "Properties": {
                "DesiredCapacity": {
                    "Ref": "NodeAutoScalingGroupDesiredCapacity"
                },
                "LaunchConfigurationName": {
                    "Ref": "NodeLaunchConfig"
                },
                "MinSize": {
                    "Ref": "NodeAutoScalingGroupMinSize"
                },
                "MaxSize": {
                    "Ref": "NodeAutoScalingGroupMaxSize"
                },
                "VPCZoneIdentifier": [
                    {
                        "Ref": "Subnet01"
                    },
                    {
                        "Ref": "Subnet02"
                    },
                    {
                        "Ref": "Subnet03"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "${ClusterName}-${NodeGroupName}-Node"
                        },
                        "PropagateAtLaunch": true
                    },
                    {
                        "Key": {
                            "Fn::Sub": "kubernetes.io/cluster/${ClusterName}"
                        },
                        "Value": "owned",
                        "PropagateAtLaunch": true
                    }
                ]
            },
            "UpdatePolicy": {
                "AutoScalingRollingUpdate": {
                    "MaxBatchSize": 1,
                    "MinInstancesInService": {
                        "Ref": "NodeAutoScalingGroupDesiredCapacity"
                    },
                    "PauseTime": "PT5M"
                }
            }
        },
        "NodeLaunchConfig": {
            "Type": "AWS::AutoScaling::LaunchConfiguration",
            "Properties": {
                "AssociatePublicIpAddress": true,
                "IamInstanceProfile": {
                    "Ref": "NodeInstanceProfile"
                },
                "ImageId": {
                    "Ref": "NodeImageId"
                },
                "InstanceType": {
                    "Ref": "NodeInstanceType"
                },
                "KeyName": {
                    "Ref": "KeyName"
                },
                "SecurityGroups": [
                    {
                        "Ref": "NodeSecurityGroup"
                    }
                ],
                "BlockDeviceMappings": [
                    {
                        "DeviceName": "/dev/xvda",
                        "Ebs": {
                            "VolumeSize": {
                                "Ref": "NodeVolumeSize"
                            },
                            "VolumeType": "gp2",
                            "DeleteOnTermination": true
                        }
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Sub": "#!/bin/bash\nset -o xtrace\n/etc/eks/bootstrap.sh ${ClusterName} ${BootstrapArguments}\n/opt/aws/bin/cfn-signal --exit-code $? \\\n         --stack  ${AWS::StackName} \\\n         --resource NodeGroup  \\\n         --region ${AWS::Region}\n"
                    }
                }
            },
            "DependsOn": [
                "EKSCluster"
            ]
        }
    },
    "Outputs": {
        "SubnetIds": {
            "Description": "All subnets in the VPC",
            "Value": {
                "Fn::Join": [
                    ",",
                    [
                        {
                            "Ref": "Subnet01"
                        },
                        {
                            "Ref": "Subnet02"
                        },
                        {
                            "Ref": "Subnet03"
                        }
                    ]
                ]
            }
        },
        "SecurityGroups": {
            "Description": "Security group for the cluster control plane communication with worker nodes",
            "Value": {
                "Fn::Join": [
                    ",",
                    [
                        {
                            "Ref": "ControlPlaneSecurityGroup"
                        }
                    ]
                ]
            }
        },
        "VpcId": {
            "Description": "The VPC Id",
            "Value": {
                "Ref": "VPC"
            }
        },
        "Endpoint": {
            "Value": {
                "Fn::GetAtt": [
                    "EKSCluster",
                    "Endpoint"
                ]
            }
        },
        "ClusterArn": {
            "Value": {
                "Fn::GetAtt": [
                    "EKSCluster",
                    "Arn"
                ]
            }
        },
        "IAMRoleArn": {
            "Value": {
                "Fn::GetAtt": [
                    "EksServiceRole",
                    "Arn"
                ]
            }
        },
        "NodeInstanceRole": {
            "Description": "The node instance role",
            "Value": {
                "Fn::GetAtt": [
                    "NodeInstanceRole",
                    "Arn"
                ]
            }
        },
        "NodeSecurityGroup": {
            "Description": "The security group for the node group",
            "Value": {
                "Ref": "NodeSecurityGroup"
            }
        }
    }
}
